--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
   <h1>Chethan Kamath</h1>
   <br>
 	<div style="float:left;>
-  <a href="https://ist.ac.at/">Tel Aviv University </a> <br>
-  School of Computer Science, Tel Aviv<br>
+  <a href="https://en.cs.tau.ac.il/computer">School of Computer Science, Tel Aviv University </a> <br>
   E-mail: ckamath at protonmail dot com <br><a href="Resources/Documents/ckamath_protonmail.asc">PGP Key</a> (identity: e-mail address)<br> 
   <br>
   </div>
@@ -100,7 +99,7 @@
 	  Eprint 2020<br>
 	</span><br>
       </li>-->
-  	<li>
+  	<!--<li>
   	<span xml:lang="EN-US" lang="EN-US">
   		<b>Practical Statistically-Sound Proofs of Exponentiation</b>
   		<br>
@@ -119,7 +118,7 @@
   									</div>
   									<br>
   									</span>
-  								</li>
+  								</li>-->
      <li>
     	<span xml:lang="EN-US" lang="EN-US">
     		<b>On Treewidth, Separators and Yao’s Garbling</b>
